Creating a 'dist' folder with the 'Extraction' executable; Moving 'resources' out of the source folder: it is now a resources root;
Total rebuild of the 'Planning' part:
- creating a class 'Rule' based on 'Rule' from 'Representations'
- modifying the other classes to use to this new class and refactoring AssemblyLine
- Testing it with AssemblyLineTest
- Implementation of the DFS, BFS, Dijkstra and A Star algorithms
;

Removing some repeating code:
- getBfsPlan and the main part of getDijkstraPlan were repeating each other: creation of a method 'calcPlan'
- Making 'BooleanDatabase' extends 'Database'
- Creating an utility class 'Powerset' in the 'extraction' package
;

ERRORS:
- There is an error in the 'Planning' part, must be the AssemblyLine, the search algorithms won't find anything