@@ -9,7 +9,7 @@ import java.util.stream.IntStream;
 /**
  * AssociationRuleMiner's class
  * <p>
- * The AssociationRuleMiner's class is a class generating the association rules based on the Frequent Items.
+ * The class AssociationRuleMiner generates the association rules based on the Frequent Items.
  * </p>
  *
  * @author DORANGE Martin, GARCIA Romain, QUERRÉ Maël, WILLIAMSON Christina
@@ -18,7 +18,7 @@ import java.util.stream.IntStream;
  */
 
 public class AssociationRuleMiner {
-	private Map<Set<Variable>, Double> frequentItemsets;
+	private final Map<Set<Variable>, Double> frequentItemsets;
 
 	public AssociationRuleMiner(Map<Set<Variable>, Double> frequentItemsets) {
 		this.frequentItemsets = frequentItemsets;
@@ -42,54 +42,41 @@ public class AssociationRuleMiner {
 
 		for (List<Variable> key : keyList) {
 			// Generating every subsets
-			List<Set<Variable>> subsetsList = new ArrayList<>();
-
-			double subsetsNumber = Math.pow(2, key.size());
-
-			for (int i = 1; i < subsetsNumber; i++) {
-				Set<Variable> subset = new HashSet<>();
-
-				for (int j = 0; j < key.size(); j++)
-					if ((i & (1 << j)) != 0)
-						subset.add(key.get(j));
-
-				if (subset.size() < key.size())
-					subsetsList.add(subset);
-			}
+			List<Set<Variable>> subSetList = Powerset.calcPowerSet(key);
 
 			// Generating pairs, calculating the Trust value and putting it into the map
-			for (int i = 0; i < subsetsList.size(); i++)
-				for (int j = i + 1; j < subsetsList.size(); j++)
+			for (int i = 0; i < subSetList.size(); i++)
+				for (int j = i + 1; j < subSetList.size(); j++)
 					// If there is no duplicate, then we're calculating the association rules
-					if (!subsetsList.get(i).containsAll(subsetsList.get(j)) &&
-							!subsetsList.get(j).containsAll(subsetsList.get(i)) &&
-							Collections.disjoint(subsetsList.get(i), subsetsList.get(j))) {
+					if (!subSetList.get(i).containsAll(subSetList.get(j)) &&
+							!subSetList.get(j).containsAll(subSetList.get(i)) &&
+							Collections.disjoint(subSetList.get(i), subSetList.get(j))) {
 						List<Set<Variable>> variableSetList =
-								new ArrayList<>(List.of(subsetsList.get(i), subsetsList.get(j)));
+								new ArrayList<>(Arrays.asList(subSetList.get(i), subSetList.get(j)));
 
 						Set<Variable> test = new HashSet<>();
-						test.addAll(subsetsList.get(i));
-						test.addAll(subsetsList.get(j));
+						test.addAll(subSetList.get(i));
+						test.addAll(subSetList.get(j));
 
 						/*
 							Adding the pair into the map, with its Frequency and Trust value if Trust value is higher
 						    than minimalTrust
 						 */
-						double trust = frequentItemsets.get(test) / frequentItemsets.get(subsetsList.get(j));
+						double trust = frequentItemsets.get(test) / frequentItemsets.get(subSetList.get(j));
 						if (trust >= minimalTrust)
-							associationRuleMap.put(variableSetList, List.of(frequentItemsets.get(test), trust));
+							associationRuleMap.put(variableSetList, Arrays.asList(frequentItemsets.get(test), trust));
 
 						/*
 							Adding the pair reverse into the map, with its Frequency and Trust value if Trust value
 							is higher than minimalTrust
 						 */
-						trust = frequentItemsets.get(test) / frequentItemsets.get(subsetsList.get(j));
+						trust = frequentItemsets.get(test) / frequentItemsets.get(subSetList.get(j));
 						if (trust >= minimalTrust)
 							associationRuleMap.put(IntStream.range(0,
 									variableSetList.size()).mapToObj(s ->
 											variableSetList.get(variableSetList.size() - 1 - s))
 											.collect(Collectors.toList()),
-									List.of(frequentItemsets.get(test), trust));
+									Arrays.asList(frequentItemsets.get(test), trust));
 					}
 		}
 
