@@ -4,7 +4,21 @@ import representations.Variable;
 
 import java.util.*;
 
-public class Executable {
+/**
+ * Executable's class
+ * <p>
+ * The class Executable is the executable of the package 'extraction' which reads a Database from a text file and
+ * translates it into a Boolean Database.
+ * </p>
+ *
+ * @author DORANGE Marin, GARCIA Romain, QUERRÉ Maël, WILLIAMSON Christina
+ * @version 2018-11-15
+ * @see Variable
+ * @see BooleanDatabase
+ * @see BooleanDBReader
+ * @see Database
+ */
+class Executable {
 	private static final Set<String> BOOLEANS = new HashSet<>(Arrays.asList("0", "1"));
 
 	// BOOLEAN VARIABLES
@@ -28,12 +42,10 @@ public class Executable {
 	private static final Variable RIGHT_COLOR_RED = new Variable("couleur_droite_rouge", BOOLEANS);
 	private static final Variable RIGHT_COLOR_WHITE = new Variable("couleur_droite_blanc", BOOLEANS);
 
-	private static final List<Variable> BOOLEAN_VARIABLE_LIST = new ArrayList<>(List.of(LEFT_COLOR_BLACK, LEFT_COLOR_RED,
-			LEFT_COLOR_WHITE, ROOF_COLOR_BLACK, ROOF_COLOR_RED, ROOF_COLOR_WHITE, OPENING_ROOF_0, OPENING_ROOF_1,
-			HOOD_COLOR_BLACK, HOOD_COLOR_RED, HOOD_COLOR_WHITE, SONO_0, SONO_1, TAILGATE_COLOR_BLACK,
+	private static final List<Variable> BOOLEAN_VARIABLE_LIST = new ArrayList<>(Arrays.asList(LEFT_COLOR_BLACK,
+			LEFT_COLOR_RED, LEFT_COLOR_WHITE, ROOF_COLOR_BLACK, ROOF_COLOR_RED, ROOF_COLOR_WHITE, OPENING_ROOF_0,
+			OPENING_ROOF_1, HOOD_COLOR_BLACK, HOOD_COLOR_RED, HOOD_COLOR_WHITE, SONO_0, SONO_1, TAILGATE_COLOR_BLACK,
 			TAILGATE_COLOR_RED, TAILGATE_COLOR_WHITE, RIGHT_COLOR_BLACK, RIGHT_COLOR_RED, RIGHT_COLOR_WHITE));
-
-	private BooleanDBReader booleanDBReader;
 
 	public static void main(String[] args) {
 		assert (args.length == 3) : "Incorrect arguments number";
